data/Java/14-use-uninitialized-primary-variable/1/[M]Error.txt
http://www.java67.com/2016/07/how-to-fix-variable-might-not-have-been-initialized-error-in-java.html
Main.java:7: error: variable b might not have been initialized
      int c = a + b;
                  ^